[project]
name = "robotraconteur-service-browser-gui"
version = "0.2.0"
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]
description = "Robot Raconteur Service Browser GUI"
requires-python = ">=3.6"
dependencies = [
    "robotraconteur",
    "robotraconteurcompanion",
    "PySide6",
    "importlib-resources"
]

readme = "README.md"


[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]

[project.scripts]
robotraconteur-service-browser-gui = "robotraconteur_service_browser_gui.robotraconteur_service_browser_gui:main"

[tool.setuptools.package-data]
robotraconteur_service_browser_gui = ["*.bmp"]
